Add interactive features to the game
Users can see their score against the computer and see if they are
the winner or loser when the game after the first side wins 5 rounds
in the game.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src = "script.js"></script>
+    <title>Rock, Paper, Scissors</title>
+    <script src = "script.js" defer></script>
+    <link rel = "stylesheet" href = ./style.css></link>
 </head>
 <body>
-    
+    <div class = question>  
+        <p>
+        Let's play Rock, Paper, Scissors. Press one of
+        the three options to play a round against the computer (Rock, Paper, Scissors).
+        </p>
+    </div>
+    <div class = options>
+        <button class = "rock">
+            Rock
+        </button>
+        <button class = "paper">
+            Paper
+        </button>
+        <button class = "scissors">
+            Scissors
+        </button>
+    </div>
 </body>
 </html>
